crates/pcb-star-core/tests/snapshots/file__file_fails_for_directory.snap
---
source: crates/diode-star-core/tests/file.rs
expression: output
---
Error: test.star:3:1-15 Path is a directory, not a file: /subdir
