crates/pcb-star-core/tests/snapshots/file__file_resolves_from_subdirectory.snap
---
source: crates/diode-star-core/tests/file.rs
expression: output
---
Module {
    name: "<root>",
    source: "subdir/test.star",
}
[]
