crates/pcb-star-core/tests/snapshots/file__file_resolves_relative_path.snap
---
source: crates/diode-star-core/tests/file.rs
expression: output
---
Module {
    name: "<root>",
    source: "test.star",
}
[]
