crates/pcb-star-core/tests/snapshots/file__file_works_for_directory.snap
---
source: crates/pcb-star-core/tests/file.rs
expression: output
---
Module {
    name: "<root>",
    source: "test.star",
}
[]
